--- a/.github/workflows/naujazodziai.yml
+++ b/.github/workflows/naujazodziai.yml
@@ -31,7 +31,10 @@ jobs:
 
       - name: Run the Python script to fetch records
         run: |
-          python update.py
+          python main.py update
+        env:
+          BLUESKY_LOGIN: naujazodziai.bsky.social
+          BLUESKY_PASSWORD: ${{ secrets.BLUESKY_PASSWORD }}
 
       - name: Commit and push new files
         run: |
@@ -50,4 +53,4 @@ jobs:
             echo "No new files to commit"
           fi
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Use GitHub token for authentication
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
